--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "server": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -25,8 +25,10 @@
     "koa-bodyparser": "^4.3.0",
     "koa-ejs": "^4.3.0",
     "koa-json": "^2.0.2",
+    "koa-passport": "^4.1.3",
     "koa-router": "^10.0.0",
-    "mongoose": "^5.10.15"
+    "mongoose": "^5.10.15",
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
