--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "koa-passport": "^4.1.3",
     "koa-router": "^10.0.0",
     "mongoose": "^5.10.15",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "validator": "^13.5.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
